--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
     "dom": "^0.0.3",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "router": "^2.1.0"
+    "router": "^2.1.0",
+    "spotify": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
